--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     volumes:
       - grafana-data:/var/lib/grafana
       - grafana-configs:/etc/grafana
+    restart: always
   prometheus:
     image: prom/prometheus:latest
     ports:
@@ -14,6 +15,7 @@ services:
     volumes:
       - prom-data:/prometheus
       - prom-configs:/etc/prometheus
+    restart: always
   node-exporter:latest
     ports:
       - "9100:9100"
@@ -26,6 +28,7 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude'
       - '^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)'
+    restart: always
 volumes:
   grafana-data:
   grafana-configs:
