--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
       - prom-data:/prometheus
       - prom-configs:/etc/prometheus
     restart: always
-  node-exporter:latest
+  node-exporter: 
+    image: prom/node-exporter:latest
     ports:
       - "9100:9100"
     volumes:
