--- a/node-exporter.yml
+++ b/node-exporter.yml
@@ -14,5 +14,6 @@ services:
       - '--path.sysfs=/host/sys'
       - '--collector.filesystem.mount-points-exclude'
       - '^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)'
-    networks: host
+    networks:
+      - default   
     restart: always
